# cloud-info-provider

./: .gitignore  .travis.yml  .zenodo.json  AUTHORS  CHANGELOG  CHANGELOG.md  CITATION.cff  Dockerfile.build  GLUE20.schema  Jenkinsfile  LICENSE.txt  README-DEEP.md  README.md  RELEASES.md  RELEASING.md  bdii.yaml  bump-release.sh  cloud.sample.ldif  cloud_bdii_provider.py  opennebula.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  single-info-system-maker-extended-v3.1.py  single-info-system-maker-extended-v3.2.py  slapd.conf  test-requirements.txt  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/linters/: .codespellrc  .jscpd.json  .markdown-lint.yml
.github/workflows/: dependabot-merge.yml  dependabot.yml  packages.yml  pre-release.yml  publish.yml  python.yml  release.yaml  release.yml  superlinter.yml
.testrepository/: 0  1  failing  times.dbm
.tox/pep8/: pip-selfcheck.json
.tox/pep8/local/: bin  include  lib  log
.tox/py27/: .tox-config1  pip-selfcheck.json
.tox/py27/local/: bin  include  lib  log
cloud_bdii/: core.py  exceptions.py  utils.py
cloud_bdii/providers/: __init__.py  opennebula.py  opennebularocci.py  openstack.py  static.py
cloud_bdii/tests/: data.py  one.imagepool.info.xml  one.templatepool.info.xml  test_base_provider.py  test_core.py  test_opennebula.py  test_openstack.py  test_static.py  utils.py
cloud_info/: core.py
cloud_info/providers/: __init__.py  opennebula.py  openstack.py  static.py
cloud_info/tests/: base.py  data.py  indigo_on_provider_templates.json  one.imagepool.xml  one.templatepool.info.xml  one.templatepool.xml  test_base_provider.py  test_core.py  test_importutils.py  test_opennebula.py  test_openstack.py  test_static.py  utils.py
cloud_info/tests/one_samples/: opennebula_rocci_provider_images.json  opennebula_rocci_provider_templates.json
cloud_info_provider/: __init__.py  core.py  exceptions.py  glue.py  utils.py
cloud_info_provider/auth_refreshers/: __init__.py  access_token.py  oidc_refresh.py  oidc_vo_refresh.py
cloud_info_provider/collectors/: base.py  cloud.py  compute.py  storage.py
cloud_info_provider/fetchers/: base.py  cloud.py  compute.py  storage.py
cloud_info_provider/formatters/: base.py  cmdb.py  glue.py
cloud_info_provider/formatters/templates/: bdii.ldif  clouddomain.ldif  compute.cmdb.json  compute.cmdb.json.tmpl  compute.glue21  compute.glue21.json.tpl  compute.ldif  glue21.json.tpl  headers.ldif  storage.cmdb.json  storage.cmdb.json.tmpl  storage.glue21  storage.ldif
cloud_info_provider/providers/: __init__.py  aws.py  base.py  gocdb.py  mesos.py  onedata.py  ooi.py  opennebula.py  openstack.py  ssl_utils.py  static.py  utils.py
cloud_info_provider/publishers/: ams.py  base.py  stdout.py
cloud_info_provider/tests/: base.py  data.py  test_auth_refreshers.py  test_base_provider.py  test_collectors.py  test_core.py  test_fetchers.py  test_formatters.py  test_gocdb.py  test_importutils.py  test_opennebula.py  test_openstack.py  test_publishers.py  test_static.py  utils.py
cloud_info_provider/tests/one_samples/: indigo_on_provider_images.json  one.documentpool.xml  one.templatepool.xml  opennebula_base_provider_images.json  opennebula_rocci_provider_images.json  opennebula_rocci_provider_templates_remote.json
debian/: changelog  control  copyright  install  rules
debs/cloud-info-provider-deep-openstack/debian/: changelog  control  copyright  rules
debs/cloud-info-provider-opennebula/debian/: changelog  control
debs/cloud-info-provider-openstack/debian/: changelog  control
debs/cloud-info-provider/debian/: copyright
etc/: sample.aws.yaml  sample.mesos.yaml  sample.oneprovider.yaml  sample.opennebula.yaml  sample.opennebularocci.yaml  sample.openstack.yaml  sample.static.yaml  static_sample.yaml
etc/templates/: application_environment.json  application_environment.ldif  application_environment_docker.json  bdii.json  bdii.ldif  clouddomain.glue21  clouddomain.json  clouddomain.ldif  compute.cmdb.json  compute.cmdbv2.json  compute.glue21  compute.ldif  compute_bdii.glue21  compute_bdii.indigo  compute_bdii.ldif  compute_endpoint.json  compute_endpoint.ldif  compute_service.json  compute_service.ldif  domain.ldif  execution_environment.json  execution_environment.ldif  headers.json  headers.ldif  indigo.json  storage.cmdb.json  storage_capacity.ldif  storage_endpoint.ldif  storage_service.ldif
etc/templates/glue2/: compute_bdii.ldif
old/: cloud-info-provider-site-entry-glue2
providers/: __init__.py  openstack.py  static.py
rpm/: cloud-info-provider-opennebula.spec  cloud-info-provider-openstack.spec  cloud-info-provider-service-0.2-1.el6.noarch.rpm  cloud-info-provider-service.spec  cloud-info-provider.spec
templates/: application_environment.ldif  bdii.ldif  compute_endpoint.ldif  compute_service.ldif  domain.ldif  execution_environment.ldif  storage_capacity.ldif  storage_endpoint.ldif  storage_service.ldif
