[metadata]
name = cloud_info_provider
summary = Cloud info provider
description-file = 
	README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = 
classifier = 
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Topic :: System :: Monitoring

[pbr]
skip_authors = True
skip_changelog = True

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = 
	cloud_info_provider
data_files = 
	/etc/cloud-info-provider = etc/*

[entry_points]
console_scripts = 
	cloud-info-provider-service = cloud_info_provider.core:main
cip.formatters =
   glue = cloud_info_provider.formatters.glue:GLUE
   cmdb = cloud_info_provider.formatters.cmdb:CMDB

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

