[metadata]
name = cloud_info_provider
summary = Cloud info provider
description-file = 
	README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = 
classifier = 
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Topic :: System :: Monitoring

[pbr]
skip_authors = True
skip_changelog = True

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = 
	cloud_info_provider
data_files = 
	/etc/cloud-info-provider = etc/*

[entry_points]
console_scripts = 
	cloud-info-provider-service = cloud_info_provider.core:main
cip.providers =
    openstack = cloud_info_provider.providers.openstack:OpenStackProvider
    opennebula = cloud_info_provider.providers.opennebula:OpenNebulaProvider
    opennebularocci = cloud_info_provider.providers.opennebula:OpenNebulaROCCIProvider
    static = cloud_info_provider.providers.static:StaticProvider
    ooi = cloud_info_provider.providers.ooi:OoiProvider
cip.formatters =
    glue = cloud_info_provider.formatters.glue:GLUE
    glue21 = cloud_info_provider.formatters.glue:GLUE21
    cmdb = cloud_info_provider.formatters.cmdb:CMDB
cip.collectors =
    headers = cloud_info_provider.collectors.cloud:CloudCollector
    clouddomain = cloud_info_provider.collectors.cloud:CloudCollector
    storage = cloud_info_provider.collectors.storage:StorageCollector
    compute = cloud_info_provider.collectors.compute:ComputeCollector
cip.auth_refreshers =
    oidcrefresh = cloud_info_provider.auth_refreshers.oidc_refresh:OidcRefreshToken

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

